# str2futhark

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs  translit.rs
tests/: cli.rs
